cmake_minimum_required(VERSION 3.19)
project(RBTreeExercise)
set(CMAKE_BUILD_TYPE "Debug")
set(CMAKE_CXX_FLAGS "-g")
add_subdirectory(BaseStructure)
add_subdirectory(Utilities)
include_directories(${PROJECT_SOURCE_DIR}/BaseStructure)
include_directories(${PROJECT_SOURCE_DIR}/Utilities)
link_libraries(BaseStructure Utilities)
add_executable(RBTree test.c RBTNode.c RBTree.c )